# cpp-app

./: AGENTS.md  ARCHITECTURE.md  CLAUDE.md  CMakeLists.txt  README.md  replit.md  vcpkg.json
.github/: copilot-instructions.md
.github/workflows/: build.yml
cpp-app/: .gitignore  AGENTS.md  ARCHITECTURE.md  CMakeLists.txt  README.md  vcpkg.json
cpp-app/.github/workflows/: build.yml
cpp-app/scripts/verify-standalone/: verify-windows.ps1
cpp-app/src/: main.cpp
cpp-app/tests/: CMakeLists.txt  test_math_utils.cpp
docs/: AGENT_STANDARDS.md  ARCHITECTURE.md  TEMPLATE_WORKFLOW.md
scripts/verify-standalone/: README.md  verify-linux.sh  verify-macos.sh  verify-windows.ps1
src/: embedded_resource.cpp  main.cpp  math_utils.cpp
tests/: test_math_utils.cpp
